extended automated Angular Forms test set
* better and longer test conditions
  - verification of the display or having of a certain class by an element
  - counting the number of occurrences of specific classes/elements under error conditions
  - attempts to start an interactive browser window for a given size without editing global settings (link to many different tests/projects)
* grouping similar activities into test sets
  - behavior highlighting for correct and incorrect activities
  - divided the list of tests into many small sets
* corrected script names starting "non-interactive" tests, without live view
  - refers to the main file "package.json"
  - similar generic names for all tests of the same kind
* ignoring resulting video files for testing
* descriptive code written in Polish deliberately
  - however, our characters are not supported in displaying test results in browser window but in the command line is better
* uncommented content of the built-in example from the file "integration/exapmples/actions.specs.js"

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "cypress_testy",
-  "desription": "Just Cypress tests",
+  "desription": "Introduction to Cypress Testing Framework",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/.bin/cypress open",
-    "test_headless": "./node_modules/.bin/cypress run",
+    "test:headless_all": "./node_modules/.bin/cypress run",
     "test:google": "./node_modules/.bin/cypress run --spec cypress/integration/googleTest.spec.js",
     "test:form": "./node_modules/.bin/cypress run --spec cypress/integration/formTest.spec.js",
     "test:angular": "./node_modules/.bin/cypress run --spec cypress/integration/angularFormTest.spec.js"
